--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
 				xmlns:android="http://schemas.android.com/apk/res/android"
 				id="cordova-plugin-telerik-pushnotifications"
-				version="3.3.2">
+				version="3.3.3">
 
   <name>PushPlugin</name>
 
@@ -66,7 +66,7 @@
     <source-file src="src/android/com/plugin/gcm/CordovaGCMBroadcastReceiver.java" target-dir="src/com/plugin/gcm/"/>
     <source-file src="src/android/com/plugin/gcm/PushHandlerActivity.java" target-dir="src/com/plugin/gcm/"/>
     <source-file src="src/android/com/plugin/gcm/PushPlugin.java" target-dir="src/com/plugin/gcm/"/>
-    <framework src="com.android.support:support-v4:+" />
+    <framework src="com.android.support:support-v4:24.1.1+" />
     <framework src="com.google.android.gms:play-services-gcm:+" />
     <framework src="src/android/fix-playservices-applicationid-CB-10014.gradle" custom="true" type="gradleReference" />
     <!-- this should not be in this plugin, perhaps in a special-purpose one -->
