* Fix for path on play services fix * update gitignore to ignore vs code files

--- a/src/android/fix-playservices-applicationid-CB-10014.gradle
+++ b/src/android/fix-playservices-applicationid-CB-10014.gradle
@@ -1,2 +1,2 @@
-def manifest = new XmlSlurper().parse(file("AndroidManifest.xml"))
+def manifest = new XmlSlurper().parse(file("src/main/AndroidManifest.xml"))
 android.defaultConfig.applicationId manifest.@package.text()
